@@ -18776,6 +18776,8 @@ extern void set_remote_working_response(
 
 	if (job_ptr->node_cnt && req_cluster &&
 	    xstrcmp(slurm_conf.cluster_name, req_cluster)) {
+		int i, i_first, i_last, addr_index = 0;
+
 		if (job_ptr->fed_details &&
 		    fed_mgr_cluster_rec) {
 			resp->working_cluster_rec = fed_mgr_cluster_rec;
@@ -18785,8 +18787,18 @@ extern void set_remote_working_response(
 
 		resp->node_addr = xcalloc(job_ptr->node_cnt,
 					  sizeof(slurm_addr_t));
-		memcpy(resp->node_addr, job_ptr->node_addr,
-		       (sizeof(slurm_addr_t) * job_ptr->node_cnt));
+		i_first = bit_ffs(job_ptr->node_bitmap);
+		if (i_first >= 0)
+			i_last = bit_fls(job_ptr->node_bitmap);
+		else
+			i_last = -2;
+		for (i = i_first; i <= i_last; i++) {
+			if (!bit_test(job_ptr->node_bitmap, i))
+				continue;
+			slurm_conf_get_addr(
+				node_record_table_ptr[i].name,
+				&resp->node_addr[addr_index++], 0);
+		}
 	}
 }
 
